- Include MIT license in package

++ Mollie Gateway for SimpleCart v1.1.4-pl
++ Released on November 2, 2015
++++++++++++++++++++++++++++++++++++++++++
- Fix typos and grammar in several lexicon entries
- Fix issue where new gateways are not shown properly until a matching lexicon is added
- Add lexicon entries for Belfius and Direct Debit gateways
- Make sure errors from instantiating and submitting the gateway are logged properly

++ Mollie Gateway for SimpleCart v1.1.3-pl
++ Released on August 21, 2015
++++++++++++++++++++++++++++++++++++++++++
- Make sure mollie gateway continues sending the proper description even with SimpleCart 2.3.0-rc5 or up

++ Mollie Gateway for SimpleCart v1.1.2-pl
++ Released on August 10, 2015
++++++++++++++++++++++++++++++++++++++++++
- Add SimpleCart as dependency for MODX Revolution 2.4+

++ Mollie Gateway for SimpleCart v1.1.1-pl
++ Released on June 30, 2015
++++++++++++++++++++++++++++++++++++++++++
- Fix syntax issue on PHP 5.3 or older

++ Mollie Gateway for SimpleCart v1.1.0-pl
++ Released on June 10, 2015
++++++++++++++++++++++++++++++++++++++++++
- Mollie Gateway is now maintained and distributed by modmore.com

++ Mollie Gateway for SimpleCart v1.0.0-pl
++ Released on April 8, 2015
++++++++++++++++++++++++++++++++++++++++++
- Initial project